Fix css board can't be centered and add/delete cols button need to be visible on mobiles

--- a/client/css/framemo.css
+++ b/client/css/framemo.css
@@ -41,3 +41,7 @@ h1 a.banner {
 #revisions-list {
     margin-top: 10px;
 }
+
+#add-col[style], #delete-col[style] {
+    display:inline !important; // No mouvehover effect on mobile
+}
